welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: type mismatch;
 found   : Unit
 required: Boolean
def loneTeen(a:Int, b:Int):Boolean = {if ((a>=13&&a<=19)||(b>=13&&b<=19)){
                                      ^